<aside> sticking to top caused issues on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -119,6 +119,7 @@ main section img {
 	}
 	aside {
 		width: 100%;
+		position: relative;
 	}
 	main {
 		width: 100%;
